# gh-actions-sandbox

./: Cargo.toml  Dockerfile  Dockerfile.test  codebook.toml  cspell.json  docker-compose.test.yml  flake.nix  justfile  rustfmt.toml
.github/workflows/: backend-ci.yml  backend.yml  ci-cd.yml  ci.yml
backend/src/: main.rs  math.rs
src/: env.rs  main.rs  math.rs
