[package]
name    = "gh-actions-sandbox"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.10.1"

[lints.clippy]
# All lint groups except restriction and cargo
nursery  = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

# Explicit panics
expect_used   = "forbid"
panic         = "forbid"
todo          = "forbid"
unimplemented = "forbid"
unreachable   = "forbid"
unwrap_used   = "forbid"

# Implicit panics (and wrapping)
arithmetic_side_effects = "forbid"
indexing_slicing        = "forbid"
string_slice            = "forbid"

# Ignoring `#[must_use]`
let_underscore_must_use = "forbid"
unused_result_ok        = "forbid"

# Unsafe discipline (only relevant when `unsafe_code` is not set to "forbid")
multiple_unsafe_ops_per_block = "forbid"
undocumented_unsafe_blocks    = "forbid"

# Lint suppression
allow_attributes                = "forbid"
allow_attributes_without_reason = "forbid"

# Binding shadowing
shadow_reuse     = "forbid"
shadow_same      = "forbid"
shadow_unrelated = "forbid"

# Superfluous naming
redundant_test_prefix    = "deny"
unnecessary_self_imports = "warn"
unused_trait_names       = "warn"

[lints.rust]
unsafe_code = "forbid"

closure_returning_async_block = "warn"
redundant_imports             = "warn"
unused_qualifications         = "warn"
